@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2017/09/05    1.2.3     Don't raise the memory limit for XSLT any more, fix coding standards errors
 2017/08/14    1.2.2     Handle list item duplication bug inside adjacent table cells
 2017/04/21    1.2.0     Use Bootstrap panel class for textboxes, use canonical tempdir reference
 2017/02/19    1.1.8     Support setting the mapping between Word heading style and HTML heading element
